@@ -3,7 +3,7 @@
 <p>
   condition is
   <% cond :true_test do %>true.<% end %>
-  <% not_cond :true_test do %>false.<% end %>
+  <% cond_not :true_test do %>false.<% end %>
 </p>
 
 <h2>2. false condition</h2>
@@ -11,5 +11,5 @@
 <p>
   condition is
   <% cond :false_test do %>true.<% end %>
-  <% not_cond :false_test do %>false.<% end %>
+  <% cond_not :false_test do %>false.<% end %>
 </p>
